--- a/MeuPonto_Blazor/Shared/NavMenu.razor
+++ b/MeuPonto_Blazor/Shared/NavMenu.razor
@@ -13,13 +13,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="apontamento">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Apontamento
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="relatorio">
+                <span class="oi oi-document" aria-hidden="true"></span> Relatório
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="parametros">
+                <span class="oi oi-wrench" aria-hidden="true"></span> Parâmetros
             </NavLink>
         </li>
     </ul>
