Gerando o PDF do Relatorio, ainda vazio.

--- a/MeuPonto_Blazor/Pages/Index.razor
+++ b/MeuPonto_Blazor/Pages/Index.razor
@@ -1,7 +1,14 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Olá, seja bem-vindo ao MeuPonto</h1>
 
-Welcome to your new app.
+<p>Este é um sistema experimental, desenvolvido por Lucas Rodrigues Fraguas como TCC do curso de Análise e Desenvolvimento de Sistemas do Instituto Federal Catarinense.</p>
+<br/>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h5>Como eu faço a marcação de pontos?</h5>
+<p>Selecione a aba 'Apontamento', então escolha o Mês para que a interface seja carregada. Ao carregar, escolha a linha referente ao dia e clique no link da coluna 'Marcações'.</p>
+
+<h5>Como eu faço a marcação de atividades?</h5>
+<p>Ao selecionar a marcação de algum dia, será exibida a opção de inserir uma atividade.</p>
+
+<h5>Como eu gero o relatório mensal de espelho de ponto?</h5>
