--- a/MeuPonto_Blazor/Pages/_Host.cshtml
+++ b/MeuPonto_Blazor/Pages/_Host.cshtml
@@ -32,5 +32,8 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+
+    @*  Add this to open in your browser the PDF document *@
+    <script src="~/js/pdfAction.js"></script>
 </body>
 </html>
