--- a/MeuPonto_Blazor/Pages/Apontamento.razor
+++ b/MeuPonto_Blazor/Pages/Apontamento.razor
@@ -2,8 +2,9 @@
 
 @using MeuPonto_Blazor.Data
 @using MeuPonto;
+@inject EmpresaService EmpresaService
 @inject ApontamentoService ApontamentoService
-@inject EmpresaService empresa
+@inject NavigationManager NavManager
 
 <h1>Apontamento</h1>
 
@@ -15,9 +16,9 @@
 }
 else
 {
-    <select class="form-control selectpicker" @bind="selectedPeriodo.Referencia">
+    <select class="form-control selectpicker" @bind="EmpresaService.SelectedPeriodo.Referencia" ontimeupdate="@UpdateApontamento();">
         <option>Selecione um valor</option>
-        @foreach (var item in empresa.GetEmpresa().Periodos)
+        @foreach (var item in EmpresaService.GetEmpresa().Periodos)
         {
             <option value="@item.Referencia">@item.Descricao</option>
         }
@@ -40,6 +41,11 @@ else
                     <td>@apontamento.Marcacao</td>
                     <td>@apontamento.Jornada</td>
                     <td>@apontamento.Observacao</td>
+                    <td>
+                        <button class="btn btn-primary" onclick="@RedirectMarcacao()" style="width:80px;">
+                            Editar
+                        </button>
+                    </td>
                 </tr>
             }
         </tbody>
@@ -48,10 +54,19 @@ else
 
 @code {
     private PontoExibicao[] apontamentos;
-    Periodo selectedPeriodo;
 
     protected override async Task OnInitializedAsync()
     {
-        apontamentos = await ApontamentoService.GetApontamentos();
+        await UpdateApontamento();
+    }
+
+    private async Task RedirectMarcacao()
+    {
+        NavManager.NavigateTo("/marcacao");
+    }
+
+    public async Task UpdateApontamento()
+    {
+        apontamentos = await ApontamentoService.GetApontamentos(EmpresaService.GetEmpresa().Funcionarios.First(), EmpresaService.SelectedPeriodo);
     }
 }
