--- a/MeuPonto_Blazor/wwwroot/css/site.css
+++ b/MeuPonto_Blazor/wwwroot/css/site.css
@@ -14,6 +14,10 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
+#just-line-break {
+    white-space: pre-line;
+}
+
 app {
     position: relative;
     display: flex;
