--- a/MeuPonto_Blazor/Pages/Index.razor
+++ b/MeuPonto_Blazor/Pages/Index.razor
@@ -2,13 +2,14 @@
 
 <h1>Olá, seja bem-vindo ao MeuPonto</h1>
 
-<p>Este é um sistema experimental, desenvolvido por Lucas Rodrigues Fraguas como TCC do curso de Análise e Desenvolvimento de Sistemas do Instituto Federal Catarinense.</p>
-<br/>
+<p>Este é um sistema experimental e não deve ser utilizado em ambientes de produção, desenvolvido por Lucas Rodrigues Fraguas como TCC do curso de Análise e Desenvolvimento de Sistemas do Instituto Federal Catarinense.</p>
+<br />
 
 <h5>Como eu faço a marcação de pontos?</h5>
-<p>Selecione a aba 'Apontamento', então escolha o Mês para que a interface seja carregada. Ao carregar, escolha a linha referente ao dia e clique no link da coluna 'Marcações'.</p>
+<p>Selecione a aba 'Apontamento', e então escolha o Mês para que a interface seja carregada. Ao carregar, escolha a linha referente ao dia e clique no link da coluna 'Marcações'.</p>
 
 <h5>Como eu faço a marcação de atividades?</h5>
-<p>Ao selecionar a marcação de algum dia, será exibida a opção de inserir uma atividade.</p>
+<p>Selecione a aba 'Apontamento', e então selecione o botão "Editar" no dia em que deseja inserir a atividade.</p>
 
 <h5>Como eu gero o relatório mensal de espelho de ponto?</h5>
+<p>Selecione a aba 'Relatório', preencha o período contábil e código do funcionário, e clique em "Gerar". Logo em seguida será gerado o espelho de ponto no formato PDF.</p>
